# synchro-python

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  RUN.md  agent.py  entrypoint.sh  hydra_run.py  mypy.ini  outputs  pyproject.toml  reports  requirements.txt  run.py
.github/workflows/: python-app.yml
config/: ab_1.yaml  ab_2.yaml  ab_3.yaml  agent.yaml  config.yaml  mic_01.yaml  microphone.yaml  optuna_01.yaml  sample.yaml
config/ai/: DEMO_SUBS_DVA_SHAGA.yaml  DEMO_SUBTITELS.yaml  NE_TROGAI_ETO_DLYA_DEMO.yaml  NE_TROGAI_ETO_DLYA_DEMO_2.yaml  NE_TROGAI_ETO_DLYA_DEMO_3.yaml  bioprom.yaml  correction_query_1.txt  correction_query_2.txt  default.yaml  default_backup_pre0316.yaml  default_gate_partial.yaml  default_sergey_0304.yaml  default_sergey_2705 copy.yaml  default_stepan_0104.yaml  default_unified.yaml  default_unified_0104.yaml  default_unified_gemma.yaml  demo_12092025.yaml  demo_golos_and_subs_29072025.yaml  demo_golos_and_subs_buffer_5.yaml  demo_golos_no_subs.yaml  gate_partial_query_1.txt  gate_query_1.txt  gate_query_2.txt  gate_unified_query_1.txt  leo_1807.yaml  leo_1807_2.yaml  leo_20250926.yaml  leo_20250930.yaml  leo_group.yaml  leo_group_2.yaml  leo_group_2_for_q4.yaml  leo_group_3.yaml  leo_group_old.yaml  readme.md  stepan_0807.yaml  stepan_1507.yaml  stepan_1807_optimized_1.yaml  stepan_1807_prompt_analysis.md  stepan_1807_prompt_logic_description.md  (+19 more)
config/pipeline/: 1_mic_2_ru_kk.yaml  1_sample_2_pt_ru.yaml  1_sample_4_pt_ru_de_fr.yaml  1_sample_8_pt_ru_de_fr_ar_hi_zh_ja.yaml  2510_postbioprom_mic.yaml  2510_postbioprom_sample.yaml  2_sample_2_en_ru.yaml  bioprom.yaml  december_mic.yaml  december_sample.yaml  default_file.yaml  default_mic.yaml  demo_1ru_x_2en_jp.yaml  demo_3ru_x_3en_jp_ch.yaml  leo_file.yaml  mic_en_ru.yaml  mic_ru_en.yaml  sample_01_file.yaml  sample_01_mic.yaml  sample_en.yaml  sample_en_with_output.yaml  sample_ru.yaml
config/settings/: agent.yaml  default.yaml  default_ru_en.yaml  sample_01_file.yaml  sample_en.yaml  sample_en_ru.yaml  sample_ru.yaml
local/: report.html  reports.ipynb
local/requirements/: audio.in  base.in
pytests/: conftest.py  test_audio_device.py
pytests/agent/: conftest.py
samples/: ai_config.json  config_leo_file.json  config_leo_mic.json  example_config.json  example_config_advanced.json  example_config_generated_one.json  example_config_generated_one_lec.json  example_config_generated_one_mic.json  example_config_no_model.json  segment_259_381.txt  segment_259_381_translated.txt  simplified_setup.json  simplified_setup_one.json  simplified_setup_sm.json  turkish_0_3.30.txt  turkish_0_3.30_translated.txt
scripts/: mono.sh
src/: RUN.md  main.py
src/data_processing/: audio_stream_processor.py  machine_translation.py  speech_to_text.py  speech_translation.py  text_to_speech.py
src/input_output/: audio_device_manager.py  audio_stream_capture.py  audio_stream_output.py
src/models/: audio_device.py  seamless_streaming.py
src/modules/: audio_device.py  audio_device_manager.py  audio_stream_capture.py  audio_stream_output.py  audio_stream_processor.py  speech_translation_system.py
src/utils/: config.py  logger.py
synchro/: core.py  logging.py
synchro/audio/: audio_device.py  audio_device_manager.py  frame_container.py  online_wpe.py  (+1 more)
synchroagent/: config.py  main.py  schemas.py  simple.py  utils.py
tests/: test_audio_device.py  test_audio_device_manager.py  test_audio_stream_capture.py  test_audio_stream_output.py  test_audio_stream_processor.py  test_machine_translation.py  test_main.py  test_speech_to_text.py  test_speech_translation.py  test_speech_translation_system.py  test_text_to_speech.py
(+132 files in other folders)
